Remove striped class

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <h1 style="text-align: center; margin: 100px;" >There are no clients in database</h1>
     {% else %}
     <h1 style="text-align: center; padding:50px;">Clients Adder</h1>
-    <table class="table table-striped">
+    <table class="table">
         <thead>
             <tr>
                 <th>First Name</th>
